--- a/package.json
+++ b/package.json
@@ -27,9 +27,12 @@
   },
   "private": true,
   "dependencies": {
+    "apollo-server-express": "^2.18.2",
     "document-register-element": "1.13.1",
+    "express": "4.17.1",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "react-router-dom": "5.2.0"
   },
   "devDependencies": {
     "@babel/core": "7.9.6",
@@ -39,15 +42,19 @@
     "@nrwl/cli": "10.3.1",
     "@nrwl/cypress": "10.3.1",
     "@nrwl/eslint-plugin-nx": "10.3.1",
+    "@nrwl/express": "^10.3.1",
     "@nrwl/jest": "10.3.1",
+    "@nrwl/node": "10.3.1",
     "@nrwl/react": "10.3.1",
     "@nrwl/web": "10.3.1",
     "@nrwl/workspace": "10.3.1",
     "@testing-library/react": "10.4.1",
+    "@types/express": "4.17.0",
     "@types/jest": "26.0.8",
     "@types/node": "~8.9.4",
     "@types/react": "16.9.38",
     "@types/react-dom": "16.9.8",
+    "@types/react-router-dom": "5.1.5",
     "@typescript-eslint/eslint-plugin": "4.3.0",
     "@typescript-eslint/parser": "4.3.0",
     "babel-jest": "26.2.2",
