--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
   },
   "private": true,
   "dependencies": {
+    "@types/node-fetch": "^2.5.7",
     "apollo-server-express": "^2.18.2",
     "document-register-element": "1.13.1",
     "express": "4.17.1",
+    "node-fetch": "^2.6.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-router-dom": "5.2.0"
